--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@prismicio/client": "^7.4.1",
+    "@prismicio/next": "^1.5.0",
+    "@prismicio/react": "^2.7.4",
     "clsx": "^2.1.0",
     "next": "14.2.3",
     "react": "^18",
@@ -19,6 +23,7 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@slicemachine/adapter-next": "^0.3.38",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -28,6 +33,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "slice-machine-ui": "^1.26.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
